--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<header>header</header>
+	<aside>aside</aside>
+	<main>main</main>
+	<footer>footer</footer>
 </body>
 </html>
